:lipstick: Fix ui (horizontal scroll)

--- a/src/components/Daily.scss
+++ b/src/components/Daily.scss
@@ -1,3 +1,7 @@
+.daily-container {
+  overflow-x: clip;
+}
+
 .daily {
   @apply p-3;
   @apply flex;
